linked css and js to project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>shoping-list | لیست خرید</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
