build UI project

--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
     <title>shoping-list | لیست خرید</title>
   </head>
   <body>
+    <div class="container mt-3">
+      <h2 class="text-center mt-4">Shoping List | لیست خرید</h2>
+      <div class="row">
+        <div class="col-1 col-md-3"></div>
+        <div class="col-10 col-md-6">
+          <div class="input-group mb-3 mt-4">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="لیست خرید خود را اضافه کنید ..."
+              aria-label="Recipient's username"
+              aria-describedby="basic-addon2"
+            />
+            <div class="input-group-prepend">
+              <button class="btn btn-success" type="button">اضافه کردن</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-1 col-md-3"></div>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
