--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -25,11 +26,19 @@
               placeholder="لیست خرید خود را اضافه کنید ..."
               aria-label="Recipient's username"
               aria-describedby="basic-addon2"
+              id="input"
             />
             <div class="input-group-prepend">
-              <button class="btn btn-success" type="button">اضافه کردن</button>
+              <button
+                class="btn btn-success"
+                type="button"
+                onclick="shopList()"
+              >
+                اضافه کردن
+              </button>
             </div>
           </div>
+          <div id="new"></div>
         </div>
         <div class="col-1 col-md-3"></div>
       </div>
